--- a/identity.html
+++ b/identity.html
@@ -1,1 +1,3 @@
-Hello world!
+<script>
+  fetch('https://9p6vivastb.execute-api.us-east-2.amazonaws.com/prod/party/query?identity=kyne.eu&type=domain').then(alert);
+</script>
